<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefHintJugador">Jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>

    <!--Diálogo Reinicio de Partida -->
    <string name="txtDialogoReinicioDeTitulo">Reiniciar Partida</string>
    <string name="txtDialogoReinicioDeMensaje">¿Desea empezar nuevamente la partida?</string>
    <string name="txtDialogoReinicioDePositivo">Sí</string>
    <string name="txtDialogoReinicioDeNegativo">No</string>
    <!--Idioma-->
    <string name="key_idioma">language</string>
    <string name="default_idioma">es</string>
    <string name="txtIdioma">Idioma</string>
    <string name="txt_time">Tiempo </string>
    <string name="txt_token">Fichas </string>
    <string name="txt_saveGame">Guardando</string>
    <string name="txtInfoList">Indica el idioma que deseas en el juego.</string>
    <!--Partidas almacenadas-->
    <string name="txt_getSaveTitle">Partidas</string>
    <string name="txt_getSaveMessage">Esta seguro que quiere cargar la partida almacenada, porque existe movimiento de fichas!</string>
    <string name="txt_getSave">Cargando</string>
    <!--Resultados-->
    <string name="resultSave">Guardar</string>
    <string name="resultCancel">Cancelar</string>
    <string name="deleteResultado">Borrar Puntuaciones</string>

    <!-- Diálogo Delete Resultados -->
    <string name="preferencesResult">Resultados</string>
    <string name="txtDialogoDeleteTitulo">Eliminar resultados</string>
    <string name="txtDialogoDeletePregunta">¿Quiere eliminar todos los resultados?</string>
    <string name="txtDialogoDeleteAfirmativo">Sí</string>
    <string name="txtDialogoDeleteNegativo">No</string>

    <string name="txtPlayer">Nombre del Jugador</string>
    <string name="txtdelete">Resultados eliminados</string>

    <!--Color-->
    <string name="key_color">colores</string>
    <string name="default_color">ec</string>
    <string name="txtcolores">Estilos</string>
    <string name="txtInfoColores">Combinación de colores por país.</string>
</resources>