<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="nombreJugador"
            android:title="@string/prefTituloNombreJugador"
            android:summary="@string/prefTextoNombreJugador"
            android:hint="@string/prefHintJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <!-- TODO Añadir otros ajustes -->
        <ListPreference
            android:defaultValue="@string/default_idioma"
            android:entries="@array/languages"
            android:entryValues="@array/languagesValues"
            android:key="@string/key_idioma"
            android:summary="@string/txtInfoList"
            android:title="@string/txtIdioma"/>

    </PreferenceCategory>
</PreferenceScreen>
